--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@
 # Example .gitignore files: https://github.com/github/gitignore
 /bower_components/
 /node_modules/
-package-lock.json
+/package-lock.json/
+/.gitignore/
